--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Free movie catalogue for you" />
-    <link rel="icon" href="./images/icons/favicon.png" />
 
-    <title>Movie Catalogue</title>
-  </head>
-  <body>
-    <h1>Movie Catalogue</h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="../public/images/icon/logo.svg" type="image/x-icon" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet" />
+
+  <title>Madima | Makan dimana ?</title>
+</head>
+
+<body>
+  <a href="#mainContent" class="skip-link">Menuju ke konten</a>
+
+  <header>
+    <nav-menu></nav-menu>
+    <hero-elem></hero-elem>
+  </header>
+
+  <main id="mainContent" class="container" tabindex="0">
+  </main>
+
+  <footer-elem></footer-elem>
+</body>
+
 </html>
