--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="./images/icons/favicon.png" />
+  <meta name="theme-color" content="#ffc107" />
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+  <meta name="description" content="Katalog Restaurant Paling Hits" />
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,6 +18,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet" />
+
+  <!-- Manifest -->
+  <link rel="manifest" href="./app.webmanifest">
 
   <title>Madima | Makan dimana ?</title>
 </head>
@@ -32,5 +38,6 @@
 
   <footer-elem></footer-elem>
 </body>
+
 
 </html>
