--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,6 +80,8 @@ body {
 }
 
 .logo-brand-link img {
+  height: 50px;
+  width: 100%;
   margin-right: 10px;
 }
 
@@ -299,11 +301,6 @@ main {
   outline: 3px solid #bf1722;
 }
 
-.rating img {
-  width: 14px !important;
-  margin-right: 4px;
-}
-
 .card-image img {
   width: 100%;
   height: 200px;
@@ -357,6 +354,8 @@ main {
 }
 
 .card-footer img {
+  height: 15px;
+  width: 15px;
   margin-right: 5px;
 }
 
