--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'opensans', sans-serif;
   font-size: 12px;
   color: #3f3f46;
   background-color: #e8e1d9;
@@ -87,7 +87,7 @@ body {
 
 .logo-brand-link span {
   font-size: 2rem;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'poppins', sans-serif;
 }
 
 .nav-list {
